Final Draft with responsiveness- temp RSVP, getting about page to display correctly on mobile; moved CSS to different file

--- a/Main.css
+++ b/Main.css
@@ -114,6 +114,15 @@ h2 {
     }
 }
 
+@media (max-width: 600px) {
+    .column {
+        padding-left: 3%;
+        padding-right: 3%;
+
+    }
+
+}
+
 .banner {
 
     width: 100%;
